Add a working timeline

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,14 @@
       href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/fontawesome.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/solid.min.css"
+      rel="stylesheet"
+    />
     <!-- -->
     <script src="https://pyodide.cdn.iodide.io/pyodide.js"></script>
     <!-- -->
