--- a/public/index.html
+++ b/public/index.html
@@ -36,9 +36,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/solid.min.css"
       rel="stylesheet"
     />
-    <!-- -->
-    <script src="https://pyodide.cdn.iodide.io/pyodide.js"></script>
-    <!-- -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css"
+    />
     <title>React App</title>
   </head>
   <body>
